[tool.poetry]
name = "polaris"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
better-profanity = "^0.6.1"
discord = "^1.0.1"
flask = "^1.1.2"
fuzzywuzzy = "^0.18.0"
python-Levenshtein-wheels = "^0.13.1"
replit = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
